client/styles/resident/about_us.css
:root {
    --color-blue-1: #1249B4;
    --color-blue-2: #00247C;

    --h2: 60px;
    --h2-lh: 62px;
    --h2-letter-space: -0.4%;

    --h3: 48px;
    --h3-lh: 60px;
    --h3-letter-space: -0.3%;

    --h5: 30px;
    --h5-lh: 38px;
    --h5-letter-space: -0.15%;

    --h6: 24px;
    --h6-lh: 32px;
    --h6-letter-space: -0.1%;

    --tx1: 20px;
    --tx1-lh: 30px;

    --tx3: 16px;
    --tx3-lh: 24px;
    --tx3-letter-space: 0.15%;

    --fw-regular: 400;
    --fw-medium: 500;
    --fw-semibold: 600;
    --fw-bold: 700;
}

.history,
.m-and-v .container-1 {
    display: flex;
    align-items: center;
    column-gap: 32px;
}

/* ==================== History section ==================== */
.history .content .carousel {
    display: flex;
    flex-direction: column;
    row-gap: 8px;
}

.history .content .carousel .select-images {
    display: flex;
    align-items: center;
    justify-content: center;
    column-gap: 8px;
    padding: 0;
    margin: 0;
}

.history .content .carousel .select-images img {
    row-gap: 8px;
}

/* ==================== Officials section ==================== */
.officials img {
    width: 100%;
    height: auto;
    border-radius: 8px;
    object-fit: cover;
}

.officials .container-1 {
    display: flex;
    gap: 16px;
    align-items: center;
}

.officials .container-1 .officials-imgs {
    display: flex;
    flex-direction: column;
    padding: 16px;
    border: 1px solid grey;
    border-radius: 16px;
    row-gap: 16px;
}

.officials .container-1 .officials-imgs .row {
    display: flex;
    gap: 8px;
    align-items: stretch;
    /* makes cards equal height */
    flex-wrap: wrap;
    /* optional for responsiveness */
}

.officials .container-1 .officials-imgs .row .cards {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.officials .container-1 .content .cards .name-and-position {
    text-align: center;
}

.officials .officials-imgs .row .cards .name-and-position {
    flex-grow: 1;
    padding: 8px;
    border-radius: 4px;
    background-color: var(--color-blue-1);
    text-align: center;
    color: white;
}

.officials .container-1 .content:first-child .cards .name-and-position p:nth-child(1) {
    font-size: var(--h5);
    font-weight: var(--fw-bold);
    line-height: var(--h5-lh);
    letter-spacing: var(--h5-letter-space);

    /* i will apply the clamp here later... - jep */
}

.officials .container-1 .content:first-child .cards .name-and-position p:nth-child(2) {
    font-size: var(--h6);
    font-weight: var(--fw-regular);
    line-height: var(--h6-lh);
    letter-spacing: var(--h6-letter-space);
    color: var(--color-blue-2);
}

.officials .container-1 .officials-imgs .row .cards .name-and-position p {
    font-size: var(--tx3);
    line-height: var(--tx3-lh);
    letter-spacing: var(--tx3-letter-space);
}


.officials .container-1 .officials-imgs .row .cards .name-and-position p:first-child {
    font-weight: var(--fw-semibold);
}

.officials .container-1 .officials-imgs .row .cards .name-and-position p:last-child {
    font-weight: var(--fw-regular);
}


/* ==================== Mission and Vision section ==================== */
.m-and-v .container-1 {
    box-shadow: 0 4px 25px 0px grey;
    border-radius: 16px;
    background-color: white;
}

.m-and-v .container-1 .content img {
    border-top-left-radius: 16px;
    border-bottom-left-radius: 16px;
}

.m-and-v .content:nth-child(2) {
    margin-right: 32px;
}

.m-and-v .content:nth-child(2) .header-and-parags h3 {
    color: #00247C;
}

.m-and-v .content:nth-child(2) .header-and-parags:first-child {
    margin-bottom: 32px;
}


/* ==================== To all h2, h3 and p ==================== */
h2 {
    font-size: var(--h2);
    font-weight: var(--fw-bold);
    line-height: var(--h2-lh);
    letter-spacing: var(--h2-letter-space);
    margin-bottom: 64px;
    text-align: center;
}

h3 {
    font-size: var(--h3);
    font-weight: var(--fw-bold);
    line-height: var(--h3-lh);
    letter-spacing: var(--h3-letter-space);
    margin-bottom: 12px;
}

p {
    font-size: var(--tx1);
    font-weight: var(--fw-regular);
    line-height: var(--tx1-lh);
}

@media screen and (max-width: 939px) {

    .history,
    .m-and-v .container-1 {
        flex-direction: column;
        row-gap: 32px;
    }

    .officials-images .row {
        flex-wrap: wrap;
        row-gap: 16px;
    }

    .officials-images .row .cards {
        flex: 1;
    }
}

